Finalizações da calibração da impressora.

--- a/lights.cfg
+++ b/lights.cfg
@@ -1,4 +1,6 @@
-# Chamber Lighting
+#####################################################################
+#    Chamber Lights
+#####################################################################
 
 [output_pin chamberlight]
 pin:            PB3
@@ -6,21 +8,42 @@ pwm:            true
 shutdown_value: 0
 cycle_time:     0.01
 
+[gcode_macro CHAMBERLIGHT_OFF]
+gcode:
+    SET_PIN PIN=chamberlight VALUE=0.0
 
-# Config for setting the status leds on the Voron StealthBurner toolhead
+[gcode_macro CHAMBERLIGHT_25]
+gcode:
+    SET_PIN PIN=chamberlight VALUE=0.25
+
+[gcode_macro CHAMBERLIGHT_50]
+gcode:
+    SET_PIN PIN=chamberlight VALUE=0.5
+
+[gcode_macro CHAMBERLIGHT_75]
+gcode:
+    SET_PIN PIN=chamberlight VALUE=0.75
+
+[gcode_macro CHAMBERLIGHT_ON]
+gcode:
+    SET_PIN PIN=chamberlight VALUE=1.0
+
+#####################################################################
+#    Voron StealthBurner toolhead leds
+#####################################################################
 
 [neopixel sb_leds]
 pin: PD3
 chain_count: 3
 color_order: GRBW
-initial_RED: 1.0
+initial_RED: 0.0
 initial_GREEN: 0.0
-initial_BLUE: 1.0
+initial_BLUE: 0.0
 initial_WHITE: 0.0
 
-[gcode_macro _sb_vars]
+[gcode_macro _SB_VARS]
 variable_colors: {
-        'logo': { # Colors for logo states
+        'status': { # Colors for status states
             'busy':             {'r': 0.4,  'g': 0.0,  'b': 0.0,  'w': 0.0},
             'cleaning':         {'r': 0.0,  'g': 0.02, 'b': 0.5,  'w': 0.0},
             'calibrating_z':    {'r': 0.8,  'g': 0.0,  'b': 0.35, 'w': 0.0},
@@ -30,13 +53,13 @@ variable_colors: {
             'meshing':          {'r': 0.2,  'g': 1.0,  'b': 0.0,  'w': 0.0},
             'off':              {'r': 0.0,  'g': 0.0,  'b': 0.0,  'w': 0.0},
             'printing':         {'r': 1.0,  'g': 0.0,  'b': 0.0,  'w': 0.0},
-            'standby':          {'r': 0.01, 'g': 0.01, 'b': 0.01, 'w': 0.1}
+            'ready':            {'r': 0.01, 'g': 0.01, 'b': 0.01, 'w': 0.3}
         },
         'nozzle': { # Colors for nozzle states
             'heating':          {'r': 0.8,  'g': 0.35, 'b': 0.0,  'w': 0.0},
             'off':              {'r': 0.0,  'g': 0.0,  'b': 0.0,  'w': 0.0},
-            'on':               {'r': 0.8,  'g': 0.8,  'b': 0.8,  'w': 1.0},
-            'standby':          {'r': 0.6,  'g': 0.0,  'b': 0.0,  'w': 0.0}
+            'on':               {'r': 0.0,  'g': 0.0,  'b': 0.0,  'w': 1.0},
+            'ready':            {'r': 0.3,  'g': 0.0,  'b': 0.0,  'w': 0.0}
         },
         'thermal': {
             'hot':              {'r': 0.87, 'g': 0.46, 'b': 0.0,  'w': 0.0},
@@ -44,32 +67,22 @@ variable_colors: {
         }
     }
 
-variable_logo_led_name:         "sb_leds" 
-# The name of the addressable LED chain that contains the logo LED(s)
-variable_logo_idx:              "1" 
+variable_status_led_name:         "sb_leds" 
+# The name of the addressable LED chain that contains the status LED(s)
+variable_status_idx:              "1" 
 # A comma-separated list of indexes LEDs in the logo
 variable_nozzle_led_name:       "sb_leds"
 # The name of the addressable LED chain that contains the nozzle LED(s). This will
-# typically be the same LED chain as the logo.
+# typically be the same LED chain as the status.
 variable_nozzle_idx:            "2,3"
 # A comma-separated list of indexes of LEDs in the nozzle
-
-variable_thermal_config: {
-        'extruder': {
-            'cool_temp': 50,
-            'leds': 'logo',
-        },
-        'heater_bed': {
-            'cool_temp': 40,
-            'leds': 'nozzle',
-        },
-    }
-# temperatures at which cooling will be considered complete
 
 gcode:
     ; Do nothing
 
-[gcode_macro _set_sb_leds]
+##--------------------------------------------------------------------
+
+[gcode_macro _SET_SB_LEDS]
 gcode:
     {% set red = params.RED|default(0)|float %}
     {% set green = params.GREEN|default(0)|float %}
@@ -78,108 +91,114 @@ gcode:
     {% set led = params.LED|string %}
     {% set idx = (params.IDX|string).split(',') %}
     {% set transmit_last = params.TRANSMIT|default(1) %}
-    
+
     {% for led_index in idx %}
         {% set transmit=transmit_last if loop.last else 0 %}
         set_led led={led} red={red} green={green} blue={blue} white={white} index={led_index} transmit={transmit}
     {% endfor %}
 
-[gcode_macro _set_sb_leds_by_name]
+[gcode_macro _SET_SB_LEDS_BY_NAME]
 gcode:
     {% set leds_name = params.LEDS %}
     {% set color_name = params.COLOR %}
-    {% set color = printer["gcode_macro _sb_vars"].colors[leds_name][color_name] %}
-    {% set led = printer["gcode_macro _sb_vars"][leds_name + "_led_name"] %}
-    {% set idx = printer["gcode_macro _sb_vars"][leds_name + "_idx"] %}
+    {% set color = printer["gcode_macro _SB_VARS"].colors[leds_name][color_name] %}
+    {% set led = printer["gcode_macro _SB_VARS"][leds_name + "_led_name"] %}
+    {% set idx = printer["gcode_macro _SB_VARS"][leds_name + "_idx"] %}
     {% set transmit = params.TRANSMIT|default(1) %}
 
-    _set_sb_leds led={led} red={color.r} green={color.g} blue={color.b} white={color.w} idx="{idx}" transmit={transmit}
+    _SET_SB_LEDS led={led} red={color.r} green={color.g} blue={color.b} white={color.w} idx="{idx}" transmit={transmit}
 
-[gcode_macro _set_logo_leds]
+##--------------------------------------------------------------------
+
+[gcode_macro _SET_STATUS_LEDS]
 gcode:
     {% set red = params.RED|default(0)|float %}
     {% set green = params.GREEN|default(0)|float %}
     {% set blue = params.BLUE|default(0)|float %}
     {% set white = params.WHITE|default(0)|float %}
-    {% set led = printer["gcode_macro _sb_vars"].logo_led_name %}
-    {% set idx = printer["gcode_macro _sb_vars"].logo_idx %}
+    {% set led = printer["gcode_macro _SB_VARS"].status_led_name %}
+    {% set idx = printer["gcode_macro _SB_VARS"].status_idx %}
     {% set transmit=params.TRANSMIT|default(1) %}
 
-    _set_sb_leds led={led} red={red} green={green} blue={blue} white={white} idx="{idx}" transmit={transmit}
+    _SET_SB_LEDS led={led} red={red} green={green} blue={blue} white={white} idx="{idx}" transmit={transmit}
 
-[gcode_macro _set_nozzle_leds]
+[gcode_macro _SET_NOZZLE_LEDS]
 gcode:
     {% set red = params.RED|default(0)|float %}
     {% set green = params.GREEN|default(0)|float %}
     {% set blue = params.BLUE|default(0)|float %}
     {% set white = params.WHITE|default(0)|float %}
-    {% set led = printer["gcode_macro _sb_vars"].nozzle_led_name %}
-    {% set idx = printer["gcode_macro _sb_vars"].nozzle_idx %}
+    {% set led = printer["gcode_macro _SB_VARS"].nozzle_led_name %}
+    {% set idx = printer["gcode_macro _SB_VARS"].nozzle_idx %}
     {% set transmit=params.TRANSMIT|default(1) %}
 
-    _set_sb_leds led={led} red={red} green={green} blue={blue} white={white} idx="{idx}" transmit={transmit}
+    _SET_SB_LEDS led={led} red={red} green={green} blue={blue} white={white} idx="{idx}" transmit={transmit}
 
-[gcode_macro set_logo_leds_off]
+##--------------------------------------------------------------------
+
+[gcode_macro STATUS_LEDS_OFF]
 gcode:
     {% set transmit=params.TRANSMIT|default(1) %}
-    _set_logo_leds red=0 blue=0 green=0 white=0 transmit={transmit}
+    _SET_STATUS_LEDS red=0 blue=0 green=0 white=0 transmit={transmit}
 
-[gcode_macro set_nozzle_leds_on]
+[gcode_macro NOZZLE_LEDS_ON]
 gcode:
     {% set transmit=params.TRANSMIT|default(1) %}
-    _set_sb_leds_by_name leds="nozzle" color="on" transmit={transmit}
+    _SET_SB_LEDS_BY_NAME leds="nozzle" color="on" transmit={transmit}
 
-[gcode_macro set_nozzle_leds_off]
+[gcode_macro NOZZLE_LEDS_OFF]
 gcode:
     {% set transmit=params.TRANSMIT|default(1) %}
-    _set_sb_leds_by_name leds="nozzle" color="off" transmit={transmit}
+    _SET_SB_LEDS_BY_NAME leds="nozzle" color="off" transmit={transmit}
 
-[gcode_macro status_off]
-gcode:
-    set_logo_leds_off transmit=0
-    set_nozzle_leds_off
+##--------------------------------------------------------------------
 
-[gcode_macro status_ready]
+[gcode_macro STATUS_OFF]
 gcode:
-    _set_sb_leds_by_name leds="logo" color="standby" transmit=0
-    _set_sb_leds_by_name leds="nozzle" color="standby" transmit=1
+    STATUS_LEDS_OFF transmit=0
+    NOZZLE_LEDS_OFF
 
-[gcode_macro status_busy]
+[gcode_macro STATUS_READY]
 gcode:
-    _set_sb_leds_by_name leds="logo" color="busy" transmit=0
-    set_nozzle_leds_on
+    _SET_SB_LEDS_BY_NAME leds="status" color="ready" transmit=0
+    _SET_SB_LEDS_BY_NAME leds="nozzle" color="ready" transmit=1
 
-[gcode_macro status_heating]
+[gcode_macro STATUS_BUSY]
 gcode:
-    _set_sb_leds_by_name leds="logo" color="heating" transmit=0
-    _set_sb_leds_by_name leds="nozzle" color="heating" transmit=1
+    _SET_SB_LEDS_BY_NAME leds="status" color="busy" transmit=0
+    NOZZLE_LEDS_ON
 
-[gcode_macro status_leveling]
+[gcode_macro STATUS_HEATING]
 gcode:
-    _set_sb_leds_by_name leds="logo" color="leveling" transmit=0
-    set_nozzle_leds_on
+    _SET_SB_LEDS_BY_NAME leds="status" color="heating" transmit=0
+    _SET_SB_LEDS_BY_NAME leds="nozzle" color="heating" transmit=1
 
-[gcode_macro status_homing]
+[gcode_macro STATUS_LEVELING]
 gcode:
-    _set_sb_leds_by_name leds="logo" color="homing" transmit=0
-    set_nozzle_leds_on
+    _SET_SB_LEDS_BY_NAME leds="status" color="leveling" transmit=0
+    NOZZLE_LEDS_ON
 
-[gcode_macro status_cleaning]
+[gcode_macro STATUS_HOMING]
 gcode:
-    _set_sb_leds_by_name leds="logo" color="cleaning" transmit=0
-    set_nozzle_leds_on
+    _SET_SB_LEDS_BY_NAME leds="status" color="homing" transmit=0
+    NOZZLE_LEDS_ON
 
-[gcode_macro status_meshing]
+[gcode_macro STATUS_CLEANING]
 gcode:
-    _set_sb_leds_by_name leds="logo" color="meshing" transmit=0
-    set_nozzle_leds_on
+    _SET_SB_LEDS_BY_NAME leds="status" color="cleaning" transmit=0
+    NOZZLE_LEDS_ON
 
-[gcode_macro status_calibrating_z]
+[gcode_macro STATUS_MESHING]
 gcode:
-    _set_sb_leds_by_name leds="logo" color="calibrating_z" transmit=0
-    set_nozzle_leds_on
+    _SET_SB_LEDS_BY_NAME leds="status" color="meshing" transmit=0
+    NOZZLE_LEDS_ON
 
-[gcode_macro status_printing]
+[gcode_macro STATUS_CALIBRATING_Z]
 gcode:
-    _set_sb_leds_by_name leds="logo" color="printing" transmit=0
-    set_nozzle_leds_on
+    _SET_SB_LEDS_BY_NAME leds="status" color="calibrating_z" transmit=0
+    NOZZLE_LEDS_ON
+
+[gcode_macro STATUS_PRINTING]
+gcode:
+    _SET_SB_LEDS_BY_NAME leds="status" color="printing" transmit=0
+    NOZZLE_LEDS_ON
