--- a/macros.cfg
+++ b/macros.cfg
@@ -1,61 +1,231 @@
-[gcode_macro G32]
-gcode:
-    G28
-    QUAD_GANTRY_LEVEL
-    G28
-    G0 X150 Y50 Z30 F20000
+#####################################################################
+#    Moving
+#####################################################################
 
 [gcode_macro CENTER]
 gcode:
     {% set posx = printer.toolhead.axis_maximum.x|float / 2.0 %}
     {% set posy = printer.toolhead.axis_maximum.y|float / 2.0 %}
+    SAVE_GCODE_STATE NAME=moving
     G90
-    G0 X{posx} Y{posy} Z30 F{params.FR|default(20000)}
+    G1 X{posx} Y{posy} F{params.FR|default(10000)}
+    RESTORE_GCODE_STATE NAME=moving
 
 [gcode_macro FRONT_LEFT]
 gcode:
     {% set posx = printer.toolhead.axis_minimum.x|float + 15.0 %}
     {% set posy = printer.toolhead.axis_minimum.y|float + 15.0 %}
+    SAVE_GCODE_STATE NAME=moving
     G90
-    G0 X{posx} Y{posy} F{params.FR|default(20000)}
+    G1 X{posx} Y{posy} F{params.FR|default(20000)}
+    RESTORE_GCODE_STATE NAME=moving
 
 [gcode_macro FRONT_RIGHT]
 gcode:
     {% set posx = printer.toolhead.axis_maximum.x|float - 15.0 %}
     {% set posy = printer.toolhead.axis_minimum.y|float + 15.0 %}
+    SAVE_GCODE_STATE NAME=moving
     G90
-    G0 X{posx} Y{posy} F{params.FR|default(20000)}
+    G1 X{posx} Y{posy} F{params.FR|default(20000)}
+    RESTORE_GCODE_STATE NAME=moving
 
 [gcode_macro FRONT_CENTER]
 gcode:
     {% set posx = printer.toolhead.axis_maximum.x|float / 2.0 %}
     {% set posy = printer.toolhead.axis_minimum.y|float + 15.0 %}
+    SAVE_GCODE_STATE NAME=moving
     G90
-    G0 X{posx} Y{posy} F{params.FR|default(20000)}
+    G1 X{posx} Y{posy} F{params.FR|default(20000)}
+    RESTORE_GCODE_STATE NAME=moving
+
+[gcode_macro BACK_LEFT]
+gcode:
+    {% set posx = printer.toolhead.axis_minimum.x|float + 15.0 %}
+    {% set posy = printer.toolhead.axis_maximum.y|float - 15.0 %}
+    SAVE_GCODE_STATE NAME=moving
+    G90
+    G1 X{posx} Y{posy} F{params.FR|default(20000)}
+    RESTORE_GCODE_STATE NAME=moving
+
+[gcode_macro BACK_RIGHT]
+gcode:
+    {% set posx = printer.toolhead.axis_maximum.x|float - 15.0 %}
+    {% set posy = printer.toolhead.axis_maximum.y|float - 15.0 %}
+    SAVE_GCODE_STATE NAME=moving
+    G90
+    G1 X{posx} Y{posy} F{params.FR|default(20000)}
+    RESTORE_GCODE_STATE NAME=moving
+
+[gcode_macro BACK_CENTER]
+gcode:
+    {% set posx = printer.toolhead.axis_maximum.x|float / 2.0 %}
+    {% set posy = printer.toolhead.axis_maximum.y|float - 15.0 %}
+    SAVE_GCODE_STATE NAME=moving
+    G90
+    G1 X{posx} Y{posy} F{params.FR|default(20000)}
+    RESTORE_GCODE_STATE NAME=moving
 
 [gcode_macro CUBE_CENTRE]
 gcode:
     {% set x_centre = printer.toolhead.axis_maximum.x|float / 2.0 %}
     {% set y_centre = printer.toolhead.axis_maximum.y|float / 2.0 %}
     {% set z_centre = printer.toolhead.axis_maximum.z|float / 2.0 %}
+    SAVE_GCODE_STATE NAME=moving
     G90
-    G0 X{x_centre} Y{y_centre} Z{z_centre} F{params.FR|default(10000)}
+    G1 X{x_centre} Y{y_centre} Z{z_centre} F{params.FR|default(10000)}
+    RESTORE_GCODE_STATE NAME=moving
+
+[gcode_macro DISABLE_STEPPERS]
+gcode:
+    M84
+    M18
+
+#####################################################################
+#    Homing, Gantry related
+#####################################################################
+
+[gcode_macro QUAD_GANTRY_LEVEL]
+rename_existing: __QUAD_GANTRY_LEVEL
+gcode:
+    STATUS_LEVELING
+    __QUAD_GANTRY_LEVEL
+    STATUS_READY
+
+[gcode_macro G32]
+gcode:
+    BED_MESH_CLEAR
+    G28
+    # CLEAN_NOZZLE
+    QUAD_GANTRY_LEVEL
+    # CLEAN_NOZZLE
+    G28
+    BED_MESH_PROFILE LOAD=default
+    BACK_CENTER
+    STATUS_READY
+
+#####################################################################
+#    Print related
+#####################################################################
 
 [gcode_macro PRINT_START]
 gcode:
-    G32                            ; home all axes
-    G91
-    G0 Z20 F3000                   ; move nozzle away from bed 
+    {% set BED = params.BED|default(100)|int %}
+    {% set EXTRUDER = params.EXTRUDER|default(250)|int %}
+
+    M140 S{BED}                     ; Set temperatures
+    M104 S{EXTRUDER}
+
+    G32                             ; Get moving ready
+    
+    M109 S{EXTRUDER}                ; Wait for temperatures
+    M190 S{BED}
+
+    # CLEAN_NOZZLE
+
+    M107                            ; Turn off fan
+    STATUS_PRINTING
 
 [gcode_macro PRINT_END]
 gcode:
-    M400                           ; wait for buffer to clear
-    G92 E0                         ; zero the extruder
-    G1 E-10.0 F3600                ; retract filament
-    G91                            ; relative positioning
-    G0 Z1.00 X20.0 Y20.0 F20000    ; move nozzle to remove stringing
+    M400                            ; wait for buffer to clear
+    G92 E0                          ; zero the extruder
+    G1 E-10.0 F3600                 ; retract filament
+    G91                             ; relative positioning
+    G1 Z5.00 F20000                 ; move nozzle to remove stringing
     TURN_OFF_HEATERS
-    M107                           ; turn off fan
-    G1 Z2 F3000                    ; move nozzle up 2mm
-    G90                            ; absolute positioning
-    G0  X125 Y250 F3600            ; park nozzle at rear
+    M107                            ; turn off fan
+    G1 Z2 F3000                     ; move nozzle up 2mm
+    G90                             ; absolute positioning
+    BACK_RIGHT                      ; park nozzle at rear
+    STATUS_OFF
+
+# [gcode_macro CLEAN_NOZZLE]
+# gcode:
+#     {% if not "xyz" in printer.toolhead.homed_axes %}
+#       { action_raise_error("Please home first!") }
+#       M117 Please home first!
+#     {% else %}
+#       {% if not printer.extruder.temperature >= 200 %}
+#         { action_raise_error("Heat up nozzle first!") }
+#       {% else %}
+#         M117 Heat up nozzle first!
+#         M117 Cleaning nozzle...
+#         STATUS_CLEANING
+#         G91
+#         G1 Z20 F20000
+#         SAVE_GCODE_STATE NAME=clean_nozzle
+#           G90
+#           G1 X200 Y305 F20000
+#           SAVE_GCODE_STATE NAME=clean_nozzle_above
+#             G1 Z1.4 F10000
+#             G1 X250 F10000
+#             G1 Y304 X200
+#             G1 Y305 X250
+#             G1 Y304 X200
+#             G1 Y305 X250
+#             G1 Y304 X200
+#             G1 Y304 X250
+#             G1 Y305 X200
+#             G1 Y304 X250
+#             G1 Y303 X200
+#             G1 Y303 X250
+#             G1 Y304 X200
+#             G1 Y303 X250
+#             G1 Y304 X200
+#             G1 Y305 X250
+#             G1 Y303 X200
+#             G1 Y305 X250
+#           RESTORE_GCODE_STATE NAME=clean_nozzle_above MOVE=1
+#           M117 Cleaned!
+#         RESTORE_GCODE_STATE NAME=clean_nozzle MOVE=1
+#         G91
+#         G1 Z-10 F10000
+#         G90
+#       {% endif %}
+#     {% endif %}
+
+#####################################################################
+#    Overrides to add Status Leds
+#####################################################################
+
+[gcode_macro G28]
+rename_existing: G000028
+gcode:
+    STATUS_HOMING
+    G000028 { rawparams }
+
+[gcode_macro M84]
+rename_existing: M000084
+gcode:
+    M000084 { rawparams }
+    STATUS_OFF
+
+[gcode_macro M18]
+rename_existing: M000018
+gcode:
+    M000018 { rawparams }
+    STATUS_OFF
+
+[gcode_macro M140]
+rename_existing: M0000140
+gcode:
+    STATUS_HEATING
+    M0000140 { rawparams }
+
+[gcode_macro M104]
+rename_existing: M0000104
+gcode:
+    STATUS_HEATING
+    M0000104 { rawparams }
+
+[gcode_macro M109]
+rename_existing: M0000109
+gcode:
+    STATUS_HEATING
+    M0000109 { rawparams }
+
+[gcode_macro M190]
+rename_existing: M0000190
+gcode:
+    STATUS_HEATING
+    M0000190 { rawparams }
