--- a/printer.cfg
+++ b/printer.cfg
@@ -1,4 +1,8 @@
-## Voron Design VORON2 300mm Spider TMC2209 UART config
+#####################################################################
+#   Voron Design VORON2 300mm Spider TMC2209 UART config
+#####################################################################
+
+[include mainsail.cfg]
 
 [mcu]
 serial: /dev/ttyAMA0
@@ -6,189 +10,34 @@ restart_method: command
 
 [printer]
 kinematics:             corexy
-max_velocity:           500  
-max_accel:              9000 
-max_accel_to_decel:     9000
-max_z_velocity:         300
-max_z_accel:            1000
-square_corner_velocity: 9.0
+max_velocity:           300
+max_accel:              5000
+max_accel_to_decel:     5000
+max_z_velocity:         20
+max_z_accel:            350
+square_corner_velocity: 5.0
+
+[idle_timeout]
+timeout: 900 # 15 minutes
+gcode:
+    TURN_OFF_HEATERS
+    DISABLE_STEPPERS
+    STATUS_OFF
+
+[gcode_arcs]
+resolution: 0.05
 
 #####################################################################
-#      X/Y Stepper Settings
+#   Motors
 #####################################################################
 
-[stepper_x] # (B Motor)
-step_pin:                   PE11
-dir_pin:                    PE10
-enable_pin:                 !PE9
-rotation_distance:          40
-microsteps:                 32
-full_steps_per_rotation:    200
-endstop_pin:                ^PB14
-position_min:               0
-position_endstop:           300
-position_max:               300
-homing_speed:               70
-homing_retract_dist:        5
-homing_positive_dir:        true
-
-[tmc2209 stepper_x]
-uart_pin:                   PE7 
-interpolate:                False
-run_current:                0.8
-sense_resistor:             0.110
-stealthchop_threshold:      0
-
-##--------------------------------------------------------------------
-
-[stepper_y] # (A Motor)
-step_pin:                   PD8
-dir_pin:                    PB12
-enable_pin:                 !PD9
-rotation_distance:          40
-microsteps:                 32
-full_steps_per_rotation:    200
-endstop_pin:                ^PB13
-position_min:               0
-position_endstop:           300
-position_max:               300
-homing_speed:               70
-homing_retract_dist:        5
-homing_positive_dir:        true
-
-[tmc2209 stepper_y]
-uart_pin:                   PE15
-interpolate:                False
-run_current:                0.8
-sense_resistor:             0.110
-stealthchop_threshold:      0
-
-#####################################################################
-#   Z Stepper Settings
-#####################################################################
-
-## Z0 Stepper - Front Left
-[stepper_z]
-step_pin:               PD5
-dir_pin:                PD6
-enable_pin:             !PD4
-rotation_distance:      40
-gear_ratio:             80:16
-microsteps:             32
-endstop_pin:            ^PA0
-position_endstop:       1.1
-position_max:           275
-position_min:           0
-homing_speed:           10
-second_homing_speed:    2.5
-homing_retract_dist:    3
-
-[tmc2209 stepper_z]
-uart_pin:               PD7
-interpolate:            False
-run_current:            0.8
-sense_resistor:         0.110
-stealthchop_threshold:  0
-
-##--------------------------------------------------------------------
-
-## Z1 Stepper - Rear Left
-[stepper_z1]
-step_pin:               PE6
-dir_pin:                !PC13
-enable_pin:             !PE5
-rotation_distance:      40
-gear_ratio:             80:16
-microsteps:             32
-
-[tmc2209 stepper_z1]
-uart_pin:               PC14
-interpolate:            False
-run_current:            0.8
-sense_resistor:         0.110
-stealthchop_threshold:  0
-
-##--------------------------------------------------------------------
-
-## Z2 Stepper - Rear Right
-[stepper_z2]
-step_pin:               PE2
-dir_pin:                PE4
-enable_pin:             !PE3
-rotation_distance:      40
-gear_ratio:             80:16
-microsteps:             32
-
-[tmc2209 stepper_z2]
-uart_pin:               PC15
-interpolate:            False
-run_current:            0.8
-sense_resistor:         0.110
-stealthchop_threshold:  0
-
-##--------------------------------------------------------------------
-
-##    Z3 Stepper - Front Right
-[stepper_z3]
-step_pin:               PD12
-dir_pin:                !PC4
-enable_pin:             !PE8
-rotation_distance:      40
-gear_ratio:             80:16
-microsteps:             32
-
-[tmc2209 stepper_z3]
-uart_pin:               PA15
-interpolate:            False
-run_current:            0.8
-sense_resistor:         0.110
-stealthchop_threshold:  0
+[include motors.cfg]
 
 #####################################################################
 #   Extruder
 #####################################################################
 
-[extruder]
-step_pin:                   PD14
-dir_pin:                    !PD13
-enable_pin:                 !PD15
-rotation_distance:          22.6789511 # Bondtech 5mm Drive Gears
-gear_ratio:                 50:17      # BMG Gear Ratio
-microsteps:                 32
-full_steps_per_rotation:    200
-nozzle_diameter:            0.400
-filament_diameter:          1.75
-heater_pin:                 PB15
-
-##--------------------------------------------------------------------
-
-sensor_type:                MAX31865
-sensor_pin:                 PD11
-spi_speed:                  4000000
-spi_software_sclk_pin:      PE12
-spi_software_mosi_pin:      PE14
-spi_software_miso_pin:      PE13
-rtd_nominal_r:              100
-rtd_reference_r:            430
-rtd_num_of_wires:           2
-
-##--------------------------------------------------------------------
-
-min_temp:                   10
-max_temp:                   270
-max_power:                  1.0
-min_extrude_temp:           170
-control:                    pid
-pid_kp:                     26.213
-pid_ki:                     1.304
-pid_kd:                     131.721
-
-[tmc2209 extruder]
-uart_pin:               PD10
-interpolate:            false
-run_current:            0.5
-sense_resistor:         0.110
-stealthchop_threshold:  0
+[include extruder.cfg]
 
 #####################################################################
 #   Bed Heater
@@ -202,9 +51,9 @@ min_temp:       0
 max_temp:       120
 pwm_cycle_time: 0.3
 control:        pid
-pid_kp:         64.079
-pid_ki:         3.531
-pid_kd:         290.758
+pid_kp:         63.810
+pid_ki:         3.298
+pid_kd:         308.683
 
 #####################################################################
 #    Probe
@@ -214,7 +63,7 @@ pid_kd:         290.758
 pin:                        ^PA3
 x_offset:                   0
 y_offset:                   25.0
-z_offset:                   2.83
+z_offset:                   2.99
 speed:                      10.0
 samples:                    3
 samples_result:             median
@@ -231,11 +80,10 @@ pin:                PA14
 max_power:          1.0
 heater:             extruder
 heater_temp:        50.0
-#fan_speed:          1.0
 
 [fan]
 pin:                PA13
-off_below:          0.10
+off_below:          0.1
 max_power:          1.0
 kick_start_time:    0.5
 
@@ -248,17 +96,17 @@ heater_temp:        45.0
 sensor_type: temperature_host
 max_temp: 80
 
+[temperature_sensor MCU]
+sensor_type: temperature_mcu
+max_temp: 80
 
 #####################################################################
-#    Homing and Gantry Adjustment Routines
+#    Homing, Gantry and Bed Adjustments
 #####################################################################
-
-[idle_timeout]
-timeout: 1800 # 30 minutes
 
 [safe_z_home]
-home_xy_position:   207.0,296.0
-speed:              150
+home_xy_position:   207.0,295.8
+speed:              100
 z_hop:              10
    
 [quad_gantry_level]
@@ -270,48 +118,53 @@ points:
     50,225
     250,225
     250,25
-speed:              150
+speed:              300
 horizontal_move_z:  20
 retries:            5
 retry_tolerance:    0.0075
 max_adjust:         10
 
-#####################################################################
-#    Bed
-#####################################################################
-
 [bed_mesh]
-speed: 150
+speed: 300
 horizontal_move_z: 10
-mesh_min: 30, 30
-mesh_max: 270, 270
+mesh_min: 40, 40
+mesh_max: 260, 260
 fade_start: 0.6
-fade_end: 6.0
-probe_count: 7, 7
+fade_end: 10.0
+probe_count: 5,5
 algorithm: bicubic
-mesh_pps: 4,4
-split_delta_z: 0.25
-move_check_distance: 5
+relative_reference_index: 12
 
 #####################################################################
-#    Misc
+#    Macros
 #####################################################################
 
-[firmware_retraction]
-retract_length: 0.6
-retract_speed: 50
-unretract_extra_length: 0
-unretract_speed: 35
-
-##--------------------------------------------------------------------
-
-[gcode_arcs]
-resolution: 0.05
-
-#####################################################################
-#    Includes
-#####################################################################
-
-[include mainsail.cfg]
-[include lights.cfg]
 [include macros.cfg]
+
+#####################################################################
+#    Lights
+#####################################################################
+
+[include lights.cfg]
+
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	  -0.013750, 0.003750, -0.007500, 0.002500, -0.023750
+#*# 	  -0.030000, 0.005000, -0.003750, 0.013750, -0.005000
+#*# 	  -0.030000, 0.006250, 0.000000, 0.025000, -0.001250
+#*# 	  -0.025000, -0.006250, -0.002500, 0.025000, -0.003750
+#*# 	  0.005000, 0.025000, 0.013750, 0.017500, -0.021250
+#*# tension = 0.2
+#*# min_x = 40.0
+#*# algo = bicubic
+#*# y_count = 5
+#*# mesh_y_pps = 2
+#*# min_y = 40.0
+#*# x_count = 5
+#*# max_y = 260.0
+#*# mesh_x_pps = 2
+#*# max_x = 260.0
