--- a/macros.cfg
+++ b/macros.cfg
@@ -99,7 +99,7 @@ gcode:
     QUAD_GANTRY_LEVEL
     # CLEAN_NOZZLE
     G28
-    BED_MESH_PROFILE LOAD=default
+    # BED_MESH_PROFILE LOAD=default
     BACK_CENTER
     STATUS_READY
 
@@ -113,14 +113,16 @@ gcode:
     {% set EXTRUDER = params.EXTRUDER|default(250)|int %}
 
     M140 S{BED}                     ; Set temperatures
-    M104 S{EXTRUDER}
+    M104 S180                       ; Keep nozzle lower so it will not ooze
 
     G32                             ; Get moving ready
     
+    BUCKET_POSITION                 ; Position the Toolhead in the nozzle cleaning position
+
     M109 S{EXTRUDER}                ; Wait for temperatures
     M190 S{BED}
 
-    # CLEAN_NOZZLE
+    PURGE_NOZZLE                    ; Purge Nozzle
 
     M107                            ; Turn off fan
     STATUS_PRINTING
@@ -139,6 +141,48 @@ gcode:
     BACK_RIGHT                      ; park nozzle at rear
     STATUS_OFF
 
+[gcode_macro BUCKET_POSITION]
+description: Position the Nozzle in the cleaning position
+gcode:
+    {% if not "xyz" in printer.toolhead.homed_axes %}
+      { action_raise_error("Please home first!") }
+      M117 Please home first!
+    {% else %}
+        ; Position Toolhead for cleaning
+        G91
+        G1 Z10 F10000
+        G90
+        G1 X45 Y300 F10000
+        G1 Z0.4 F10000
+    {% endif %}
+
+[gcode_macro PURGE_NOZZLE]
+gcode:
+    {% if not "xyz" in printer.toolhead.homed_axes %}
+      { action_raise_error("Please home first!") }
+      M117 Please home first!
+    {% else %}
+      {% if not printer.extruder.temperature >= 200 %}
+        { action_raise_error("Heat up nozzle first!") }
+        M117 Heat up nozzle first!
+      {% else %}
+        M117 Purging nozzle...
+        STATUS_CLEANING
+
+        ; Purge nozzle while moving Toolhead
+        M83                         ; Extruder in relative mode
+        G92 E0
+        G90
+        G1 X{ range(3, 6) | random } E10 F200
+        G1 Y290 Z 0.3 F10000        ; Move nozzle in purge line position
+        G91
+        G1 Y-35 E3 F1000            ; Extrude 3mm of filament in a 3.5cm line
+        G1 Z 10 F10000
+        G92 E0
+      {% endif %}
+    {% endif %}
+
+
 # [gcode_macro CLEAN_NOZZLE]
 # gcode:
 #     {% if not "xyz" in printer.toolhead.homed_axes %}
@@ -147,8 +191,8 @@ gcode:
 #     {% else %}
 #       {% if not printer.extruder.temperature >= 200 %}
 #         { action_raise_error("Heat up nozzle first!") }
-#       {% else %}
 #         M117 Heat up nozzle first!
+#       {% else %}
 #         M117 Cleaning nozzle...
 #         STATUS_CLEANING
 #         G91
@@ -205,18 +249,6 @@ rename_existing: M000018
 gcode:
     M000018 { rawparams }
     STATUS_OFF
-
-[gcode_macro M140]
-rename_existing: M0000140
-gcode:
-    STATUS_HEATING
-    M0000140 { rawparams }
-
-[gcode_macro M104]
-rename_existing: M0000104
-gcode:
-    STATUS_HEATING
-    M0000104 { rawparams }
 
 [gcode_macro M109]
 rename_existing: M0000109
