--- a/macros.cfg
+++ b/macros.cfg
@@ -140,6 +140,7 @@ gcode:
     G90                             ; absolute positioning
     BACK_RIGHT                      ; park nozzle at rear
     STATUS_OFF
+    CHAMBERLIGHT_OFF
 
 [gcode_macro BUCKET_POSITION]
 description: Position the Nozzle in the cleaning position
