--- a/macros.cfg
+++ b/macros.cfg
@@ -111,12 +111,17 @@ gcode:
 gcode:
     {% set BED = params.BED|default(100)|int %}
     {% set EXTRUDER = params.EXTRUDER|default(250)|int %}
+    {% set CHAMBER = params.CHAMBER|default(60)|int %}
 
-    M140 S{BED}                     ; Set temperatures
-    M104 S180                       ; Keep nozzle lower so it will not ooze
+    {% if printer['output_pin chamberlight'].value <= 0 %}
+    CHAMBERLIGHT_25
+    {% endif %}
 
     G32                             ; Get moving ready
-    
+
+    M104 S{EXTRUDER}                ; Set temperatures
+    M140 S{BED}                     ;
+
     BUCKET_POSITION                 ; Position the Toolhead in the nozzle cleaning position
 
     M109 S{EXTRUDER}                ; Wait for temperatures
@@ -149,12 +154,15 @@ gcode:
       { action_raise_error("Please home first!") }
       M117 Please home first!
     {% else %}
+
+        SAVE_GCODE_STATE NAME=bucket
         ; Position Toolhead for cleaning
         G91
-        G1 Z10 F10000
+        G1 Z10 F4200
         G90
         G1 X45 Y300 F10000
         G1 Z0.4 F10000
+        RESTORE_GCODE_STATE NAME=bucket
     {% endif %}
 
 [gcode_macro PURGE_NOZZLE]
@@ -170,16 +178,17 @@ gcode:
         M117 Purging nozzle...
         STATUS_CLEANING
 
+        SAVE_GCODE_STATE NAME=purge
         ; Purge nozzle while moving Toolhead
         M83                         ; Extruder in relative mode
         G92 E0
         G90
-        G1 X{ range(3, 6) | random } E10 F200
+        G1 X{ range(3, 6) | random } E15 F200
         G1 Y290 Z 0.3 F10000        ; Move nozzle in purge line position
         G91
-        G1 Y-35 E3 F1000            ; Extrude 3mm of filament in a 3.5cm line
-        G1 Z 10 F10000
+        G1 Y-35 E4 F1000           ; Extrude 4mm of filament in a 5cm line
         G92 E0
+        RESTORE_GCODE_STATE NAME=purge
       {% endif %}
     {% endif %}
 
