--- a/extruder.cfg
+++ b/extruder.cfg
@@ -9,6 +9,7 @@ full_steps_per_rotation:    400
 nozzle_diameter:            0.400
 filament_diameter:          1.75
 heater_pin:                 PB15
+max_extrude_cross_section:  2
 
 ##--------------------------------------------------------------------
 
@@ -36,7 +37,7 @@ pid_kd:                     131.721
 [tmc2209 extruder]
 uart_pin:               PD10
 interpolate:            false
-run_current:            0.5
+run_current:            0.6
 sense_resistor:         0.110
 stealthchop_threshold:  0
 
