Cleanup routines. Modified some fan configurations.

--- a/macros.cfg
+++ b/macros.cfg
@@ -65,14 +65,14 @@ gcode:
     G1 X{posx} Y{posy} F{params.FR|default(20000)}
     RESTORE_GCODE_STATE NAME=moving
 
-[gcode_macro CUBE_CENTRE]
+[gcode_macro CUBE_CENTER]
 gcode:
-    {% set x_centre = printer.toolhead.axis_maximum.x|float / 2.0 %}
-    {% set y_centre = printer.toolhead.axis_maximum.y|float / 2.0 %}
-    {% set z_centre = printer.toolhead.axis_maximum.z|float / 2.0 %}
+    {% set x_center = printer.toolhead.axis_maximum.x|float / 2.0 %}
+    {% set y_center = printer.toolhead.axis_maximum.y|float / 2.0 %}
+    {% set z_center = printer.toolhead.axis_maximum.z|float / 2.0 %}
     SAVE_GCODE_STATE NAME=moving
     G90
-    G1 X{x_centre} Y{y_centre} Z{z_centre} F{params.FR|default(10000)}
+    G1 X{x_center} Y{y_center} Z{z_center} F{params.FR|default(10000)}
     RESTORE_GCODE_STATE NAME=moving
 
 [gcode_macro DISABLE_STEPPERS]
@@ -128,6 +128,7 @@ gcode:
     M190 S{BED}
 
     PURGE_NOZZLE                    ; Purge Nozzle
+    CLEAN_NOZZLE                    ; Clean Nozzle
 
     M107                            ; Turn off fan
     STATUS_PRINTING
@@ -154,15 +155,80 @@ gcode:
       { action_raise_error("Please home first!") }
       M117 Please home first!
     {% else %}
-
         SAVE_GCODE_STATE NAME=bucket
         ; Position Toolhead for cleaning
         G91
-        G1 Z10 F4200
+        G1 Z5 F4200
         G90
         G1 X45 Y300 F10000
         G1 Z0.4 F10000
         RESTORE_GCODE_STATE NAME=bucket
+    {% endif %}
+
+[gcode_macro CLEAN_NOZZLE]
+description: Clean the Nozzle in the bed brush
+gcode:
+    {% if not "xyz" in printer.toolhead.homed_axes %}
+      { action_raise_error("Please home first!") }
+      M117 Please home first!
+    {% else %}
+        {% if not printer.extruder.temperature >= 200 %}
+            { action_raise_error("Heat up nozzle first!") }
+            M117 Heat up nozzle first!
+        {% else %}
+            SAVE_GCODE_STATE NAME=clean
+            ; Retract to avoid ozzing
+            ; M83
+            ; G92 E0
+
+            ; G1 E -10 F1200
+
+            ; Position Toolhead for cleaning
+            G90
+            G1 Z 5 F4200
+            G1 X 58 Y 300 F10000
+            G1 Z 2.5 F4200
+            G91
+
+            G1 X 5.167  Y -4 F5000
+            G1 X 10.333 Y 4
+            G1 X 10.333 Y -4
+            G1 X 5.167  Y 4
+            G1 X -31.0
+            G1          Y -1
+            G1 X 31.0
+            G1          Y 1
+            G1 X -31.0
+
+            G1 X 5.167  Y -4
+            G1 X 10.333 Y 4
+            G1 X 10.333 Y -4
+            G1 X 5.167  Y 4
+            G1 X -31.0
+            G1          Y -1
+            G1 X 31.0
+            G1          Y 1
+            G1 X -31.0
+
+            ; G1 E -10 F1200
+
+            G1 X 5.167  Y -4
+            G1 X 10.333 Y 4
+            G1 X 10.333 Y -4
+            G1 X 5.167  Y 4
+            G1 X -31.0
+            G1          Y -1
+            G1 X 31.0
+            G1          Y 1
+            G1 X -31.0
+
+            G1 Z 2.5 F4200
+
+            ; G28 Z               ; Home Z again, in case there was some leftover in the nozzle
+            ; G1 E 20 F300        ; Undo retraction
+
+            RESTORE_GCODE_STATE NAME=clean
+        {% endif %}
     {% endif %}
 
 [gcode_macro PURGE_NOZZLE]
@@ -178,65 +244,81 @@ gcode:
         M117 Purging nozzle...
         STATUS_CLEANING
 
+        BUCKET_POSITION
+
         SAVE_GCODE_STATE NAME=purge
+
         ; Purge nozzle while moving Toolhead
-        M83                         ; Extruder in relative mode
+        M83
         G92 E0
         G90
         G1 X{ range(3, 6) | random } E15 F200
-        G1 Y290 Z 0.3 F10000        ; Move nozzle in purge line position
-        G91
-        G1 Y-35 E4 F1000           ; Extrude 4mm of filament in a 5cm line
+        G1 Y270 Z 0.3 F2500        ; Move nozzle to cut the purged filament
         G92 E0
         RESTORE_GCODE_STATE NAME=purge
       {% endif %}
     {% endif %}
 
+[gcode_macro UNLOAD_FILAMENT]
+gcode:
+    {% if not "xyz" in printer.toolhead.homed_axes %}
+        { action_raise_error("Please home first!") }
+        M117 Please home first!
+    {% else %}
+        {% if not printer.extruder.temperature >= 200 %}
+            { action_raise_error("Heat up nozzle first!") }
+            M117 Heat up nozzle first!
+        {% else %}
+            SAVE_GCODE_STATE NAME=unload_filament
 
-# [gcode_macro CLEAN_NOZZLE]
-# gcode:
-#     {% if not "xyz" in printer.toolhead.homed_axes %}
-#       { action_raise_error("Please home first!") }
-#       M117 Please home first!
-#     {% else %}
-#       {% if not printer.extruder.temperature >= 200 %}
-#         { action_raise_error("Heat up nozzle first!") }
-#         M117 Heat up nozzle first!
-#       {% else %}
-#         M117 Cleaning nozzle...
-#         STATUS_CLEANING
-#         G91
-#         G1 Z20 F20000
-#         SAVE_GCODE_STATE NAME=clean_nozzle
-#           G90
-#           G1 X200 Y305 F20000
-#           SAVE_GCODE_STATE NAME=clean_nozzle_above
-#             G1 Z1.4 F10000
-#             G1 X250 F10000
-#             G1 Y304 X200
-#             G1 Y305 X250
-#             G1 Y304 X200
-#             G1 Y305 X250
-#             G1 Y304 X200
-#             G1 Y304 X250
-#             G1 Y305 X200
-#             G1 Y304 X250
-#             G1 Y303 X200
-#             G1 Y303 X250
-#             G1 Y304 X200
-#             G1 Y303 X250
-#             G1 Y304 X200
-#             G1 Y305 X250
-#             G1 Y303 X200
-#             G1 Y305 X250
-#           RESTORE_GCODE_STATE NAME=clean_nozzle_above MOVE=1
-#           M117 Cleaned!
-#         RESTORE_GCODE_STATE NAME=clean_nozzle MOVE=1
-#         G91
-#         G1 Z-10 F10000
-#         G90
-#       {% endif %}
-#     {% endif %}
+            G90
+            G1 Z110 F4200
+            FRONT_CENTER
+
+            M83
+            G1 E10 F300                 ; extrude a little to soften new filament
+            M117 Unloading...
+            G1 E-90 F1200               ; retract filament completely
+
+            M117 Filament unloaded!
+
+            RESTORE_GCODE_STATE NAME=unload_filament
+        {% endif %}
+    {% endif %}
+
+[gcode_macro LOAD_FILAMENT]
+gcode:
+    {% if not "xyz" in printer.toolhead.homed_axes %}
+        { action_raise_error("Please home first!") }
+        M117 Please home first!
+    {% else %}
+        {% if not printer.extruder.temperature >= 200 %}
+            { action_raise_error("Heat up nozzle first!") }
+            M117 Heat up nozzle first!
+        {% else %}
+            SAVE_GCODE_STATE NAME=load_filament
+
+            BUCKET_POSITION
+
+            M83                         ; Extruder in relative mode
+
+            M117 Get ready...
+            G4 S3                       ; Wait until operator is ready
+
+            M117 Loading...
+            G1 E10 F200                 ; extrude to fill the extruder
+            M117 Filling Hotend...
+            G1 E35 F300                 ; extrude to fill the hotend
+            G1 E35 F300                 ; ...
+            M117 Purging...
+            G1 E30 F300                 ; purge a little
+            RESTORE_GCODE_STATE NAME=load_filament
+
+            G1 E-15 F400                ; Retract outside the SAVE_GCODE_STATE
+
+            M117 Filament loaded!
+        {% endif %}
+    {% endif %}
 
 #####################################################################
 #    Overrides to add Status Leds
