--- a/printer.cfg
+++ b/printer.cfg
@@ -23,6 +23,8 @@ gcode:
     TURN_OFF_HEATERS
     DISABLE_STEPPERS
     STATUS_OFF
+    NOZZLE_LEDS_OFF
+    CHAMBERLIGHT_OFF
 
 [gcode_arcs]
 resolution: 0.05
@@ -59,27 +61,34 @@ pid_kd:         308.683
 #    Temperature / Fan Control
 #####################################################################
 
+# Hotend Fan
 [heater_fan hotend_fan]
 pin:                PA14
-max_power:          1.0
 heater:             extruder
 heater_temp:        50.0
+shutdown_speed:     1.0
 
+# Part cooling Fan
 [fan]
 pin:                PA13
 off_below:          0.1
-max_power:          1.0
 kick_start_time:    0.5
 
-[heater_fan controller_fan]
+# Electronics compartment Fan
+[controller_fan electronics_fan]
 pin:                PB2
-heater:             heater_bed
-heater_temp:        45.0
+heater:             extruder,heater_bed
+stepper:            stepper_z,stepper_z1,stepper_z2,stepper_z3,stepper_x,stepper_y
+shutdown_speed:     1.0
+idle_speed:         0.4
+idle_timeout:       300   # 5 minutes
 
+# Raspberry Pi Core Temperature Sensor
 [temperature_sensor Host]
 sensor_type: temperature_host
 max_temp: 80
 
+# Spider MCU Core Temperature Sensor
 [temperature_sensor MCU]
 sensor_type: temperature_mcu
 max_temp: 80
@@ -100,11 +109,15 @@ sample_retract_dist:        3.0
 samples_tolerance:          0.006
 samples_tolerance_retries:  3
 
+##--------------------------------------------------------------------
+
 [safe_z_home]
 home_xy_position:   207.8,296.0
 speed:              100
 z_hop:              10
    
+##--------------------------------------------------------------------
+
 [quad_gantry_level]
 gantry_corners:
     -60,-10
@@ -119,6 +132,8 @@ horizontal_move_z:  20
 retries:            5
 retry_tolerance:    0.0075
 max_adjust:         10
+
+##--------------------------------------------------------------------
 
 [bed_mesh]
 speed: 300
