Increased frequency in caselight PWM to avoid flikering in the webcam.

--- a/macros.cfg
+++ b/macros.cfg
@@ -75,9 +75,8 @@ gcode:
     G1 X{x_center} Y{y_center} Z{z_center} F{params.FR|default(10000)}
     RESTORE_GCODE_STATE NAME=moving
 
-[gcode_macro DISABLE_STEPPERS]
+[gcode_macro ENTER_IDLE]
 gcode:
-    M84
     M18
 
 #####################################################################
