--- a/printer.cfg
+++ b/printer.cfg
@@ -21,10 +21,10 @@ square_corner_velocity: 5.0
 timeout: 900 # 15 minutes
 gcode:
     TURN_OFF_HEATERS
-    DISABLE_STEPPERS
     STATUS_OFF
     NOZZLE_LEDS_OFF
     CHAMBERLIGHT_OFF
+    ENTER_IDLE
 
 [gcode_arcs]
 resolution: 0.05
