Melhorias nas macros de limpeza.

--- a/macros.cfg
+++ b/macros.cfg
@@ -126,10 +126,9 @@ gcode:
     M109 S{EXTRUDER}                ; Wait for temperatures
     M190 S{BED}
 
-    PURGE_NOZZLE                    ; Purge Nozzle
-    CLEAN_NOZZLE                    ; Clean Nozzle
+    PURGE_NOZZLE
+    CLEAN_NOZZLE
 
-    M107                            ; Turn off fan
     STATUS_PRINTING
 
 [gcode_macro PRINT_END]
@@ -171,63 +170,50 @@ gcode:
       { action_raise_error("Please home first!") }
       M117 Please home first!
     {% else %}
-        {% if not printer.extruder.temperature >= 200 %}
-            { action_raise_error("Heat up nozzle first!") }
-            M117 Heat up nozzle first!
-        {% else %}
-            SAVE_GCODE_STATE NAME=clean
-            ; Retract to avoid ozzing
-            ; M83
-            ; G92 E0
+        SAVE_GCODE_STATE NAME=clean
 
-            ; G1 E -10 F1200
+        ; Position Toolhead for cleaning
+        G90
+        G1 Z 5 F4200
+        G1 X 58 Y 300 F10000
+        G1 Z 2.5 F4200
+        G91
 
-            ; Position Toolhead for cleaning
-            G90
-            G1 Z 5 F4200
-            G1 X 58 Y 300 F10000
-            G1 Z 2.5 F4200
-            G91
+        G1 X 5.167  Y -4 F5000
+        G1 X 10.333 Y 4
+        G1 X 10.333 Y -4
+        G1 X 5.167  Y 4
+        G1 X -31.0
+        G1          Y -1
+        G1 X 31.0
+        G1          Y 1
+        G1 X -31.0
 
-            G1 X 5.167  Y -4 F5000
-            G1 X 10.333 Y 4
-            G1 X 10.333 Y -4
-            G1 X 5.167  Y 4
-            G1 X -31.0
-            G1          Y -1
-            G1 X 31.0
-            G1          Y 1
-            G1 X -31.0
+        G1 X 5.167  Y -4
+        G1 X 10.333 Y 4
+        G1 X 10.333 Y -4
+        G1 X 5.167  Y 4
+        G1 X -31.0
+        G1          Y -1
+        G1 X 31.0
+        G1          Y 1
+        G1 X -31.0
 
-            G1 X 5.167  Y -4
-            G1 X 10.333 Y 4
-            G1 X 10.333 Y -4
-            G1 X 5.167  Y 4
-            G1 X -31.0
-            G1          Y -1
-            G1 X 31.0
-            G1          Y 1
-            G1 X -31.0
+        G1 X 5.167  Y -4
+        G1 X 10.333 Y 4
+        G1 X 10.333 Y -4
+        G1 X 5.167  Y 4
+        G1 X -31.0
+        G1          Y -1
+        G1 X 31.0
+        G1          Y 1
+        G1 X -31.0
 
-            ; G1 E -10 F1200
+        G1 Z 2.5 F4200
 
-            G1 X 5.167  Y -4
-            G1 X 10.333 Y 4
-            G1 X 10.333 Y -4
-            G1 X 5.167  Y 4
-            G1 X -31.0
-            G1          Y -1
-            G1 X 31.0
-            G1          Y 1
-            G1 X -31.0
+        G1 Y -20 F10000
 
-            G1 Z 2.5 F4200
-
-            ; G28 Z               ; Home Z again, in case there was some leftover in the nozzle
-            ; G1 E 20 F300        ; Undo retraction
-
-            RESTORE_GCODE_STATE NAME=clean
-        {% endif %}
+        RESTORE_GCODE_STATE NAME=clean
     {% endif %}
 
 [gcode_macro PURGE_NOZZLE]
@@ -254,6 +240,7 @@ gcode:
         G1 X{ range(3, 6) | random } E15 F200
         G1 Y270 Z 0.3 F2500        ; Move nozzle to cut the purged filament
         G92 E0
+        G1 Z 5 F4200
         RESTORE_GCODE_STATE NAME=purge
       {% endif %}
     {% endif %}
@@ -277,7 +264,8 @@ gcode:
             M83
             G1 E10 F300                 ; extrude a little to soften new filament
             M117 Unloading...
-            G1 E-90 F1200               ; retract filament completely
+            G1 E-45 F1200               ; retract filament completely
+            G1 E-45 F1200               ; retract filament completely
 
             M117 Filament unloaded!
 
@@ -309,11 +297,13 @@ gcode:
             M117 Filling Hotend...
             G1 E35 F300                 ; extrude to fill the hotend
             G1 E35 F300                 ; ...
-            M117 Purging...
-            G1 E30 F300                 ; purge a little
+
+            PURGE_NOZZLE
+            CLEAN_NOZZLE
+
             RESTORE_GCODE_STATE NAME=load_filament
 
-            G1 E-15 F400                ; Retract outside the SAVE_GCODE_STATE
+            G1 E-1 F400                 ; Retract outside the SAVE_GCODE_STATE
 
             M117 Filament loaded!
         {% endif %}
