Corrigido o endstop Z para smooth PEI sheet. Correção das macros.

--- a/macros.cfg
+++ b/macros.cfg
@@ -1,4 +1,22 @@
 #####################################################################
+#    Global Variables
+#####################################################################
+
+[gcode_macro global]
+variable_hotend_max_temp_g28:   40
+variable_print_end_clean_temp:  180
+variable_moving_macros_slow_fr: 2400    ; 40
+variable_moving_macros_fr:      4800    ; 80
+variable_moving_macros_fast_fr: 18000   ; 300
+variable_retraction_fr:         1800    ; 30
+variable_retraction_fast_fr:    3600    ; 60
+variable_extrude_fr:            180     ; 3
+variable_extrude_fast_fr:       300     ; 5
+gcode:
+    ; Nothing
+
+
+#####################################################################
 #    Moving
 #####################################################################
 
@@ -8,7 +26,7 @@ gcode:
     {% set posy = printer.toolhead.axis_maximum.y|float / 2.0 %}
     SAVE_GCODE_STATE NAME=moving
     G90
-    G1 X{posx} Y{posy} F{params.FR|default(10000)}
+    G1 X{posx} Y{posy} F{printer["gcode_macro global"].moving_macros_fast_fr}
     RESTORE_GCODE_STATE NAME=moving
 
 [gcode_macro FRONT_LEFT]
@@ -17,7 +35,7 @@ gcode:
     {% set posy = printer.toolhead.axis_minimum.y|float + 15.0 %}
     SAVE_GCODE_STATE NAME=moving
     G90
-    G1 X{posx} Y{posy} F{params.FR|default(20000)}
+    G1 X{posx} Y{posy} F{printer["gcode_macro global"].moving_macros_fast_fr}
     RESTORE_GCODE_STATE NAME=moving
 
 [gcode_macro FRONT_RIGHT]
@@ -26,7 +44,7 @@ gcode:
     {% set posy = printer.toolhead.axis_minimum.y|float + 15.0 %}
     SAVE_GCODE_STATE NAME=moving
     G90
-    G1 X{posx} Y{posy} F{params.FR|default(20000)}
+    G1 X{posx} Y{posy} F{printer["gcode_macro global"].moving_macros_fast_fr}
     RESTORE_GCODE_STATE NAME=moving
 
 [gcode_macro FRONT_CENTER]
@@ -35,7 +53,7 @@ gcode:
     {% set posy = printer.toolhead.axis_minimum.y|float + 15.0 %}
     SAVE_GCODE_STATE NAME=moving
     G90
-    G1 X{posx} Y{posy} F{params.FR|default(20000)}
+    G1 X{posx} Y{posy} F{printer["gcode_macro global"].moving_macros_fast_fr}
     RESTORE_GCODE_STATE NAME=moving
 
 [gcode_macro BACK_LEFT]
@@ -44,7 +62,7 @@ gcode:
     {% set posy = printer.toolhead.axis_maximum.y|float - 15.0 %}
     SAVE_GCODE_STATE NAME=moving
     G90
-    G1 X{posx} Y{posy} F{params.FR|default(20000)}
+    G1 X{posx} Y{posy} F{printer["gcode_macro global"].moving_macros_fast_fr}
     RESTORE_GCODE_STATE NAME=moving
 
 [gcode_macro BACK_RIGHT]
@@ -53,7 +71,7 @@ gcode:
     {% set posy = printer.toolhead.axis_maximum.y|float - 15.0 %}
     SAVE_GCODE_STATE NAME=moving
     G90
-    G1 X{posx} Y{posy} F{params.FR|default(20000)}
+    G1 X{posx} Y{posy} F{printer["gcode_macro global"].moving_macros_fast_fr}
     RESTORE_GCODE_STATE NAME=moving
 
 [gcode_macro BACK_CENTER]
@@ -62,7 +80,7 @@ gcode:
     {% set posy = printer.toolhead.axis_maximum.y|float - 15.0 %}
     SAVE_GCODE_STATE NAME=moving
     G90
-    G1 X{posx} Y{posy} F{params.FR|default(20000)}
+    G1 X{posx} Y{posy} F{printer["gcode_macro global"].moving_macros_fast_fr}
     RESTORE_GCODE_STATE NAME=moving
 
 [gcode_macro CUBE_CENTER]
@@ -72,7 +90,7 @@ gcode:
     {% set z_center = printer.toolhead.axis_maximum.z|float / 2.0 %}
     SAVE_GCODE_STATE NAME=moving
     G90
-    G1 X{x_center} Y{y_center} Z{z_center} F{params.FR|default(10000)}
+    G1 X{x_center} Y{y_center} Z{z_center} F{printer["gcode_macro global"].moving_macros_fast_fr}
     RESTORE_GCODE_STATE NAME=moving
 
 [gcode_macro ENTER_IDLE]
@@ -94,9 +112,7 @@ gcode:
 gcode:
     BED_MESH_CLEAR
     G28
-    # CLEAN_NOZZLE
     QUAD_GANTRY_LEVEL
-    # CLEAN_NOZZLE
     G28
     # BED_MESH_PROFILE LOAD=default
     BACK_CENTER
@@ -109,11 +125,11 @@ gcode:
 [gcode_macro PRINT_START]
 gcode:
     {% set BED = params.BED|default(100)|int %}
-    {% set EXTRUDER = params.EXTRUDER|default(250)|int %}
+    {% set EXTRUDER = params.EXTRUDER|default(240)|int %}
     {% set CHAMBER = params.CHAMBER|default(60)|int %}
 
     {% if printer['output_pin chamberlight'].value <= 0 %}
-    CHAMBERLIGHT_25
+        CHAMBERLIGHT_25
     {% endif %}
 
     G32                             ; Get moving ready
@@ -133,16 +149,27 @@ gcode:
 
 [gcode_macro PRINT_END]
 gcode:
-    M400                            ; wait for buffer to clear
-    G92 E0                          ; zero the extruder
-    G1 E-10.0 F3600                 ; retract filament
-    G91                             ; relative positioning
-    G1 Z5.00 F20000                 ; move nozzle to remove stringing
+    M400                                                        ; wait for buffer to clear
+    G92 E0                                                      ; zero the extruder
+    G1 E-10.0 F{printer["gcode_macro global"].retraction_fr}    ; retract filament
+    G91                                                         ; relative positioning
+    G1 Z5 F{printer["gcode_macro global"].moving_macros_fr}     ; move nozzle to remove stringing
+    M107                                                        ; turn off fan
     TURN_OFF_HEATERS
-    M107                            ; turn off fan
-    G1 Z2 F3000                     ; move nozzle up 2mm
-    G90                             ; absolute positioning
-    BACK_RIGHT                      ; park nozzle at rear
+
+    ; Clean nozzle on cooldown
+    G90                                                         ; absolute positioning
+    BUCKET_POSITION                                             ; position the nozzle in the bucket
+    M104 S{printer["gcode_macro global"].print_end_clean_temp}
+    M109 S{printer["gcode_macro global"].print_end_clean_temp}
+    CLEAN_NOZZLE
+    BUCKET_POSITION
+    M104 S{printer["gcode_macro global"].print_end_clean_temp - 20}
+    M109 S{printer["gcode_macro global"].print_end_clean_temp - 20}
+    TURN_OFF_HEATERS
+    CLEAN_NOZZLE
+
+    BACK_RIGHT                                                  ; park nozzle at rear
     STATUS_OFF
     CHAMBERLIGHT_OFF
 
@@ -154,12 +181,11 @@ gcode:
       M117 Please home first!
     {% else %}
         SAVE_GCODE_STATE NAME=bucket
-        ; Position Toolhead for cleaning
         G91
-        G1 Z5 F4200
+        G1 Z5 F{printer["gcode_macro global"].moving_macros_fr}
         G90
-        G1 X45 Y300 F10000
-        G1 Z0.4 F10000
+        G1 X45 Y300 F{printer["gcode_macro global"].moving_macros_fast_fr}
+        G1 Z0.4 F{printer["gcode_macro global"].moving_macros_fr}
         RESTORE_GCODE_STATE NAME=bucket
     {% endif %}
 
@@ -172,46 +198,45 @@ gcode:
     {% else %}
         SAVE_GCODE_STATE NAME=clean
 
-        ; Position Toolhead for cleaning
         G90
-        G1 Z 5 F4200
-        G1 X 58 Y 300 F10000
-        G1 Z 2.5 F4200
+        G1 Z5 F{printer["gcode_macro global"].moving_macros_fr}
+        G1 X58 Y300 F{printer["gcode_macro global"].moving_macros_fast_fr}
+        G1 Z2.5 F{printer["gcode_macro global"].moving_macros_fr}
         G91
 
-        G1 X 5.167  Y -4 F5000
-        G1 X 10.333 Y 4
-        G1 X 10.333 Y -4
-        G1 X 5.167  Y 4
-        G1 X -31.0
-        G1          Y -1
-        G1 X 31.0
-        G1          Y 1
-        G1 X -31.0
+        G1 X5.167  Y-4 F{printer["gcode_macro global"].moving_macros_fr}
+        G1 X10.333 Y4
+        G1 X10.333 Y-4
+        G1 X5.167  Y4
+        G1 X-31.0
+        G1 Y-1
+        G1 X31.0
+        G1 Y1
+        G1 X-31.0
 
-        G1 X 5.167  Y -4
-        G1 X 10.333 Y 4
-        G1 X 10.333 Y -4
-        G1 X 5.167  Y 4
-        G1 X -31.0
-        G1          Y -1
-        G1 X 31.0
-        G1          Y 1
-        G1 X -31.0
+        G1 X5.167 Y-4
+        G1 X10.333 Y4
+        G1 X10.333 Y-4
+        G1 X5.167 Y4
+        G1 X-31.0
+        G1 Y-1
+        G1 X31.0
+        G1 Y1
+        G1 X-31.0
 
-        G1 X 5.167  Y -4
-        G1 X 10.333 Y 4
-        G1 X 10.333 Y -4
-        G1 X 5.167  Y 4
-        G1 X -31.0
-        G1          Y -1
-        G1 X 31.0
-        G1          Y 1
-        G1 X -31.0
+        G1 X5.167  Y-4
+        G1 X10.333 Y4
+        G1 X10.333 Y-4
+        G1 X5.167  Y4
+        G1 X-31.0
+        G1 Y-1
+        G1 X31.0
+        G1 Y1
+        G1 X-31.0
 
-        G1 Z 2.5 F4200
+        G1 Z2.5 F{printer["gcode_macro global"].moving_macros_fr}
 
-        G1 Y -20 F10000
+        G1 Y-20 F{printer["gcode_macro global"].moving_macros_fast_fr}
 
         RESTORE_GCODE_STATE NAME=clean
     {% endif %}
@@ -226,7 +251,7 @@ gcode:
         { action_raise_error("Heat up nozzle first!") }
         M117 Heat up nozzle first!
       {% else %}
-        M117 Purging nozzle...
+        M117 Purging nozzle
         STATUS_CLEANING
 
         BUCKET_POSITION
@@ -237,10 +262,11 @@ gcode:
         M83
         G92 E0
         G90
-        G1 X{ range(3, 6) | random } E15 F200
-        G1 Y270 Z 0.3 F2500        ; Move nozzle to cut the purged filament
+        G1 X{ range(3, 6) | random } E15 F{printer["gcode_macro global"].extrude_fr}
+        G1 Z0.3 F{printer["gcode_macro global"].moving_macros_fr}
+        G1 Y270 F{printer["gcode_macro global"].moving_macros_slow_fr}        ; Move nozzle to cut the purged filament
         G92 E0
-        G1 Z 5 F4200
+        G1 Z5 F{printer["gcode_macro global"].moving_macros_fr}
         RESTORE_GCODE_STATE NAME=purge
       {% endif %}
     {% endif %}
@@ -258,14 +284,15 @@ gcode:
             SAVE_GCODE_STATE NAME=unload_filament
 
             G90
-            G1 Z110 F4200
+            G1 Z110 F{printer["gcode_macro global"].moving_macros_fr}
             FRONT_CENTER
 
+            ; Extruder in relative mode
             M83
-            G1 E10 F300                 ; extrude a little to soften new filament
-            M117 Unloading...
-            G1 E-45 F1200               ; retract filament completely
-            G1 E-45 F1200               ; retract filament completely
+            G1 E10 F{printer["gcode_macro global"].extrude_fast_fr}     ; extrude a little to soften new filament
+            M117 Unloading
+            G1 E-45 F{printer["gcode_macro global"].retraction_fr}      ; retract filament completely
+            G1 E-45 F{printer["gcode_macro global"].retraction_fr}      ; retract filament completely
 
             M117 Filament unloaded!
 
@@ -287,23 +314,25 @@ gcode:
 
             BUCKET_POSITION
 
-            M83                         ; Extruder in relative mode
+            ; Extruder in relative mode
+            M83
 
-            M117 Get ready...
-            G4 S3                       ; Wait until operator is ready
+            M117 Get ready
+            ; Wait until operator is ready
+            G4 S3
 
-            M117 Loading...
-            G1 E10 F200                 ; extrude to fill the extruder
-            M117 Filling Hotend...
-            G1 E35 F300                 ; extrude to fill the hotend
-            G1 E35 F300                 ; ...
+            M117 Loading
+            G1 E10 F{printer["gcode_macro global"].extrude_fr}          ; extrude to fill the extruder
+            M117 Filling Hotend
+            G1 E35 F{printer["gcode_macro global"].extrude_fast_fr}     ; extrude to fill the hotend
+            G1 E35 F{printer["gcode_macro global"].extrude_fast_fr}     ; ...
 
             PURGE_NOZZLE
             CLEAN_NOZZLE
 
             RESTORE_GCODE_STATE NAME=load_filament
 
-            G1 E-1 F400                 ; Retract outside the SAVE_GCODE_STATE
+            G1 E-1 F{printer["gcode_macro global"].retraction_fr}       ; Retract outside the SAVE_GCODE_STATE
 
             M117 Filament loaded!
         {% endif %}
@@ -317,6 +346,13 @@ gcode:
 rename_existing: G000028
 gcode:
     STATUS_HOMING
+    ; Set a fixed temperature for the hotend for homing
+    M117 Setting Hotend temperature for homing({printer["gcode_macro global"].hotend_max_temp_g28}C)
+    M106 S255   ; Help cooldown nozzle
+    M104 S{printer["gcode_macro global"].hotend_max_temp_g28}
+    M109 S{printer["gcode_macro global"].hotend_max_temp_g28}
+    M107        ; Turn off fan
+    M117 Homing
     G000028 { rawparams }
 
 [gcode_macro M84]
