--- a/motors.cfg
+++ b/motors.cfg
@@ -7,7 +7,9 @@ rotation_distance:      40
 gear_ratio:             80:16
 microsteps:             64
 
-position_endstop:       1.230
+# For smooth PEI sheet:   1.04
+# For textured PEI sheet: ????
+position_endstop:       1.04
 
 endstop_pin:            ^PA0
 position_max:           275
